@@ -10,13 +10,14 @@ include('scripts/set_list_vars.php');
 list_select_enum('componentstatus',$listoptions,'reportbook');
 unset($listoptions);
 
-$comps=list_subject_components('%',$rcrid,'A');
-$moreinfo='Determine which subject components this assessment will apply to: ';
+$comps=(array)list_subject_components('%',$rcrid,'A');
+$moreinfo='Determine which subject components this assessment will apply to: 
+';
 foreach($comps as $comp){
-	$moreinfo.=$comp['status'].'.'.$comp['name'].' ';
+	$moreinfo.=$comp['status'].'.'.$comp['name'].' 
+';
 	}
 ?>
-		<div style="float:left;" title="<?php print $moreinfo;?>" 
-			name="help" value="" onclick="" >
+		<div style="float:left;" title="<?php print $moreinfo;?>" name="help" value="" onclick="" >
 		<img class="clicktohelp" />
 		</div>
